# dgxc-benchmarking

./: .gitignore  .gitmodules  APPENDIX.md  CHANGELOG  CODE_OF_CONDUCT.md  Exemplar_validation.md  LICENSE  README.md  SECURITY.md  devzone-repro.md  exemplar.yaml  install.sh  print_env.sh  release.yaml
.github/: PULL_REQUEST_TEMPLATE.md
common/: common-utils.sh  nsys-profile.md  parse_train_timing.sh  parse_train_timing_mbridge.sh
ft_llama3/: README_70b.md  README_8b.md  callbacks_11961.patch  launch.sh  llama3_finetune.py  llama3_finetune_utils.py  requirements.txt  setup.sh
grok1/: README.md  README_314b.md  configure.sh  grok1_314b.yaml  launch.sh  metadata.yaml  setup.sh
hf-llama2/: README_70b.md  launch.sh  launch_70b.sh  requirements.txt  setup.sh
hf-mistral/: README_7b.md  launch.sh  launch_7b.sh  setup.sh
inf_blueprint/: README.md  speed-config.sh  sweep-speed.sh
installer/: README.md  installer.py  pyproject.toml
llama3.1/: README.md  README_405b.md  README_70b.md  README_8b.md  configure.sh  generate_dataset.sh  launch.sh  llama31_utils.py  metadata.yaml  pretrain_llama31.py  setup.sh
llama4/: README.md  launch.sh  metadata.yaml  setup.sh
llmb-run/: Bulk_Examples.md  README.md  llmb-run  llmb_run.py  pyproject.toml
llmb-run/src/llmb_run/: __init__.py  config_manager.py  constants.py  job_launcher.py  main.py  metadata_utils.py  slurm_utils.py  task_manager.py  workload_validator.py
maxtext/: README_70b.md  configure.sh  launch.sh  setup.sh
nccl/: README.md  metadata.yaml  setup_nccl_launcher.sh
nemo_megatron/: README_175b.md  check_dataset.sh  configure.sh  generate_dataset.sh  gpt3_175b_hydra.yaml  launch.sh  setup.sh
nemotron/: README.md  README_15b.md  README_340b.md  configure.sh  gsw_nemo.patch  launch.sh  setup.sh  (+3 more)
nemotron-h/: README.md  launch.sh  metadata.yaml
(+226 files in other folders)
